@@ -1,6 +1,7 @@
 #footer
-  == Powered by #{link_to "Fat Free CRM", "http://www.fatfreecrm.com", :popup => true }
-  == &copy; 2008-#{Date.today.year} by Michael Dvorkin
-  == | #{link_to("About", "#about", :rel => "facebox")}
+  Powered by #{link_to "Fat Free CRM", "http://www.fatfreecrm.com", :popup => true }
+  v#{FatFreeCRM::Version} &copy; 2008-#{Date.today.year} by Michael Dvorkin
+  - unless tabless_layout?
+    | #{link_to("About", "#about", :rel => "facebox")}
 %br
 = render :partial => "layouts/about"
