@@ -1,4 +1,3 @@
 = show_flash(:sticky => true)
 .tabless= yield
-%br
-= render :partial => "layouts/about"
+%center= render :partial => "layouts/footer"
