@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Sep 5, 2009
+---------------------------------------------------------------------
+- Added overlay to the facebox library.
+
 Thu, Sep 3, 2009
 ---------------------------------------------------------------------
 - Make sure [rake crm:setup:admin] can actually assign admin attribute (thanks Rit!)
